[new feature]主页和一些按钮

--- a/WebViewApp/app/src/main/res/values/strings.xml
+++ b/WebViewApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WebViewApp</string>
+    <string name="search">搜索框</string>
+    <string name="username">username</string>
+    <string name="password">password</string>
 </resources>
