--- a/WebViewApp/app/src/main/res/values/strings.xml
+++ b/WebViewApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
     <string name="search">搜索框</string>
     <string name="username">username</string>
     <string name="password">password</string>
+    <string name="title_activity_item_detail_host">Item Detail Host Activity</string>
+    <string name="title_item_list">Items</string>
+    <string name="title_item_detail">Item Detail</string>
+    <string name="title_activity_user">UserActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="login">立即登录</string>
+    <string name="welcome_username">welcome+username</string>
 </resources>
