--- a/WebViewApp/app/src/main/res/values/strings.xml
+++ b/WebViewApp/app/src/main/res/values/strings.xml
@@ -12,7 +12,10 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="requireName">输入用户名</string>
+    <string name="requirePassword">输入密码</string>
+    <string name="sign_up">注册</string>
+    <string name="cancel">取消</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="login">立即登录</string>
